--- a/SistemaVentaBlazor/Server/appsettings.json
+++ b/SistemaVentaBlazor/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CadenaSQL": ""
+    "CadenaSQL": "Data Source=SANTIAGO\\SQLEXPRESS;Initial Catalog=BeautySalesDB;Integrated Security=True; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
